savepoint by prabu

--- a/src/app/inspector_dashboard/agreement-page/agreement-page.component.html
+++ b/src/app/inspector_dashboard/agreement-page/agreement-page.component.html
@@ -1,154 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Agreement Acceptance Page</title>
-<!-- <style>
-    body {
-        font-family:  sans-serif;
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        background-color: #f4f4f4;
-    }
-    .container {
-        max-width: 600px;
-        margin: 50px auto;
-        padding: 20px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        background-color: #fff;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-    h2 {
-        color: #333;
-    }
-    p {
-        color: #666;
-        margin-bottom: 15px;
-    }
-    label {
-        display: flex;
-        align-items: center;
-        margin-bottom: 15px;
-        position: relative;
-    }
-    input[type="checkbox"] {
-        display: none;
-    }
-    .checkmark {
-        position: relative;
-        display: inline-block;
-        width: 20px;
-        height: 20px;
-        background-color: #ccc;
-        border-radius: 3px;
-        margin-right: 10px;
-    }
-    .accept-checkbox input[type="checkbox"]:checked + .checkmark {
-        background-color: #2196F3;
-    }
-    .checkmark:after {
-        content: "";
-        position: absolute;
-        display: none;
-    }
-    .accept-checkbox input[type="checkbox"]:checked + .checkmark:after {
-        display: block;
-    }
-    .accept-checkbox .checkmark:after {
-        left: 7px;
-        top: 3px;
-        width: 5px;
-        height: 10px;
-        border: solid white;
-        border-width: 0 3px 3px 0;
-        transform: rotate(45deg);
-    }
-    button {
-        background-color: #2196F3;
-        color: white;
-        border: none;
-        padding: 10px 20px;
-        font-size: 16px;
-        border-radius: 3px;
-        cursor: pointer;
-    }
-    button:hover {
-        background-color: #0b7dda;
-    }
-</style> -->
-</head>
-<!-- <body>
-
 <div class="container">
-    <h2>Agreement Acceptance</h2>
-    <p>Please read the following terms and conditions carefully:</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vel augue vestibulum, fermentum turpis nec, sollicitudin mi. Nam at ex at libero vestibulum accumsan.</p>
-    <p>By clicking the checkbox below, you agree to abide by the terms and conditions stated above.</p>
-    
-    <form action="#" method="post">
-        <label>
-            <span>Have you been involved in Sales process for this Contract?</span>
-            <input type="radio" name="salesProcess" value="yes" [(ngModel)]="salesProcess" required> Yes
-            <input type="radio" name="salesProcess" value="no" [(ngModel)]="salesProcess" required> No
-        </label>
-        <br>
-        <label>
-            <span>Have you self-assigned for this inspection?</span><span></span>
-            <input type="radio" name="selfAssigned" value="yes" [(ngModel)]="selfAssigned" required> Yes
-            <input type="radio" name="selfAssigned" value="no" [(ngModel)]="selfAssigned" required> No
-        </label>
-        <br>
-        <label class="accept-checkbox">
-            <input type="checkbox" name="acceptance" [(ngModel)]="check" required>
-            <span class="checkmark"></span>
-            <span>I have read and agree to the terms and conditions</span>
-        </label>
-        <br>
-       
-        <button type="submit" (click)="accept()">Accept</button>
-    </form>
+    <div class="opening-meeting">
+    <h3>OPENING MEETING</h3>
+    <p><b>Greetings of the Day One and all present here!</b></p>
+    <p>This inspection is categorized 1 as  third-party Type 3 inspection - inspection for safety, performance & maintenance quality assessment, and it is a checklist-based assessment.</p>
+    <p>During the course of the inspection, we will be collecting a lot of data about the elevator along with pictures as evidence of our findings. We assure you that the information gathered and pictures taken will be handled with confidentiality as we are bound by oath of secrecy.we are also bound by independence and impartiality requirements as an inspection body and if you find any issues with us or our conduct or inspection process you may write to <b>info@paplcorp.com</b> and your concerns will be addressed appropriately </p>
+    <p>This inspection will be conducted by Me/Us between<b>from date </b> to <b>toDate </b></p>
+    <p><b>Thank you!</b></p>
+    <p class="disclaimer">For inquiries, please contact us at <a href="mailto:info@paplcorp.com">info@paplcorp.com</a>.</p>
+    <button class="action-button" (click)=" accept()">Proceed to Attendence Sheet</button>
+</div>
 </div>
 
-</body> -->
-<body>
-    <div class="container">
-        <h1 class="agreement">AGREEMENT ACCEPTANCE</h1>
-        <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odio sunt, qui similique molestias illo iusto ea accusamus? Debitis modi id beatae asperiores tempora quas dignissimos dolores eaque eveniet illum.</p>
-       
-        
-        <div class="question">
-            <p><b>Have you been involved in the sales process for this contract?</b></p>
-            <div class="radio-options">
-                <label>
-                    <input type="radio" name="salesProcess" value="yes" [(ngModel)]="salesProcess" required> <b>Yes</b>
-                </label>
-                <label>
-                    <input type="radio" name="salesProcess" value="no" [(ngModel)]="salesProcess" required> <b> No</b>
-                </label>
-            </div>
-        </div>
-        
-        <div class="question">
-            <p><b>Have you self-assigned for this inspection?</b></p>
-            <div class="radio-options">
-                <label>
-                     <input type="radio" name="selfAssigned" value="yes" [(ngModel)]="selfAssigned" required> <b>Yes</b>
-                </label>
-                <label>
-                   <input type="radio" name="selfAssigned" value="no" [(ngModel)]="selfAssigned" required><b> No</b> 
-                </label>
-            </div>
-        </div>
 
-        <div class="checkbox">
-            <input type="checkbox" name="acceptance" [(ngModel)]="check" required>
-            <label for="accept">I accept the terms and conditions of the agreement</label>
-        </div>
-        
-        <button type="submit" (click)="accept()">Accept</button>
-    </div>
-</body>
-</html>
