--- a/src/app/inspector_dashboard/schedule-page/schedule-page.component.scss
+++ b/src/app/inspector_dashboard/schedule-page/schedule-page.component.scss
@@ -1,51 +1,107 @@
-body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f7f7f7;
-  }
 .container {
     max-width: 600px;
-    margin: 0 auto;
+    width: 100%;
     padding: 20px;
-    text-align: center;
+    border-radius: 5px;
+    background-color: hsl(0, 0%, 100%);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: auto; /* Center the container horizontally */
+    margin-top: 50px; /* Adjust top margin as needed */
+    margin-bottom: 50px; /* Adjust bottom margin as needed */
+    display: flex;
+    flex-direction: column; /* Align items vertically */
+    align-items: center; /* Center-align items horizontally */
+
 }
 
 .request {
-    margin-top: 40px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    background-color: #f9f9f9;
+    margin-bottom: 20px;
 }
 
-.buttons {
-    margin-top: 20px;
+.acceptance {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
 }
 
-.approve-btn {
-    background-color: #4CAF50;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+.radio-options label {
+    margin-right: 5px;
+}
+
+.from_to {
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid #ccc;
+    padding-top: 5px;
+    margin-top: 30px;
+}
+
+.from_to h3 {
+    margin: 0;
+}
+
+.left-align {
+    margin-right: auto;
+}
+
+.right-align {
+    margin-left: auto;
+}
+
+.request1 {
+    text-align: center;
+    color: #333;
+    font-size: 28px;
+    margin-top: 0;
+    text-decoration: underline;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.form {
+    font-size: 18px;
+    text-align: center;
+    color: #666;
+    margin-bottom: 20px;
+}
+
+.acceptance p.acceptance {
     margin-right: 10px;
 }
 
-.approve-btn:hover {
-    background-color: #3e8e41;
+.buttons-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    
+}
+
+.approve-btn, .reject-btn {
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    padding: 6px 12px;
+    font-size: 18px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-right: 20px;
+    transition: background-color 0.3s ease;
 }
 
 .reject-btn {
-    background-color: #f44336;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+    background-color: #cf1212;
+}
+.approve-btn[disabled] {
+    cursor: not-allowed; /* Block cursor interaction */
+    background-color: #cccccc; /* Grey out the button */
+    color: #666666; /* Text color */
 }
 
-.reject-btn:hover {
-    background-color: #e60000;
+
+.yes_btn {
+    color: #17721a;
 }
 
+.no_btn {
+    color: #cf1212;
+}
