--- a/src/app/inspector_dashboard/basic-date/basic-date.component.scss
+++ b/src/app/inspector_dashboard/basic-date/basic-date.component.scss
@@ -18,12 +18,13 @@ table {
 th, td {
     border: 1px solid #ddd;
     padding: 15px;
-    text-align: left;
-    // font-size: 20px;
+    text-align: center;
+    font-size:16px;
+   
 }
 
-th {
-    background-color: #333;
+thead {
+    background-image: linear-gradient(125deg, #2c3e50 50%,#000000 50%);
     color: #fff;
     text-align: center;
     
@@ -50,10 +51,12 @@ p{
     font-weight:bold;
 }
 .plus{
-    margin-left:15px; 
+    margin-left:6px; 
     align-items: center;
     position: relative; 
     top: 6px;
+    width: 25px;
+    height: 25px;
     }
 
 
