--- a/src/app/inspector_dashboard/site-risk-assessment/site-risk-assessment.component.scss
+++ b/src/app/inspector_dashboard/site-risk-assessment/site-risk-assessment.component.scss
@@ -1,41 +1,3 @@
-// /* styles.css (or your component-specific CSS file) */
-// .risk-assessment-table {
-//     width: 100%;
-//     border: 1px solid #ddd; /* Add border to the table */
-//     border-collapse: collapse;
-//   }
-//   thead{
-//     background-image: linear-gradient(125deg, #2c3e50 50%,#000000 50%);
-//   }
-  
-  
-//   .risk-assessment-table th,
-//   .risk-assessment-table td {
-//     border: 1px solid #ddd;
-//     padding: 8px;
-//   }
-  
-//   .risk-assessment-table th {
-//     background-color: #f2f2f2;
-//     text-align: left;
-//   }
-  
-//   .risk-assessment-table tbody tr:nth-child(even) {
-//     background-color: #f2f2f2;
-//   }
- 
-//   input[type="radio"] {
-//     margin: 0;
-//     padding: 0;
-//     width: auto;
-//   }
-
-//   .page-heading {
-//     text-align: center;
-//     font-size: 24px;
-//     margin-bottom: 20px;
-//   }
-  
 table {
   width: 80%;
   border-collapse: collapse;
@@ -47,6 +9,9 @@ th, td {
   border: 1px solid gray;
   padding: 8px;
   text-align: center;
+}
+th{
+  padding: 16px;
 }
 
 .th {
@@ -72,6 +37,7 @@ tbody tr:nth-child(odd) {
       cursor: pointer;
       border-radius: 5px;
       margin-top: 20px;
+      margin-bottom: 10px;
   }
       
   .button-container {
@@ -81,4 +47,9 @@ tbody tr:nth-child(odd) {
     text-align: center;
     margin-top:15px;
     font-size: 30px;
+}
+.disabled-button {
+  background-color: #ccc; 
+  color: #666; 
+  cursor: not-allowed; 
 }
