navigation logic by prabu

--- a/src/app/inspector_dashboard/agreement-page/agreement-page.component.html
+++ b/src/app/inspector_dashboard/agreement-page/agreement-page.component.html
@@ -4,7 +4,7 @@
     <p><b>Greetings of the Day One and all present here!</b></p>
     <p>This inspection is categorized 1 as  third-party Type 3 inspection - inspection for safety, performance & maintenance quality assessment, and it is a checklist-based assessment.</p>
     <p>During the course of the inspection, we will be collecting a lot of data about the elevator along with pictures as evidence of our findings. We assure you that the information gathered and pictures taken will be handled with confidentiality as we are bound by oath of secrecy.we are also bound by independence and impartiality requirements as an inspection body and if you find any issues with us or our conduct or inspection process you may write to <b>info@paplcorp.com</b> and your concerns will be addressed appropriately </p>
-    <p>This inspection will be conducted by Me/Us between<b>from date </b> to <b>toDate </b></p>
+    <p>This inspection will be conducted by Me/Us between<b>{{inf_26.schedule_from |  date: 'dd-MM-yyyy'}} </b> to <b>{{inf_26.schedule_to |  date: 'dd-MM-yyyy'}} </b></p>
     <p><b>Thank you!</b></p>
     <p class="disclaimer">For inquiries, please contact us at <a href="mailto:info@paplcorp.com">info@paplcorp.com</a>.</p>
     <button class="action-button" (click)=" accept()">Proceed to Attendence Sheet</button>
