--- a/src/app/inspector_dashboard/schedule-page/schedule-page.component.html
+++ b/src/app/inspector_dashboard/schedule-page/schedule-page.component.html
@@ -82,7 +82,7 @@
                 </div>
                 
                 <div class="buttons-container">
-                <button class="approve-btn" (click)="approveRequest(request.id)" [disabled]="isAcceptButtonDisabled"><i class="fas fa-check"></i> Accept</button>
+                <button class="approve-btn" (click)="approveRequest(request.id)" [disabled]="!isAcceptButtonDisabled"><i class="fas fa-check"></i> Accept</button>
                 <button class="reject-btn" (click)="openRejectDialog(request.id)"><i class="fas fa-times"></i> Reject</button>
                 </div>
                
