--- a/src/app/inspector_dashboard/autho-details/autho-details.component.html
+++ b/src/app/inspector_dashboard/autho-details/autho-details.component.html
@@ -11,13 +11,15 @@
 <table>
     <thead>
         <tr>
-            <th colspan="4">Inspection Conducted in the Presence Of</th>
+            <th colspan="6">Inspection Conducted in the Presence Of</th>
         </tr>
         <tr>
             <th>Name</th>
             <th>Designation</th>
             <th>Company</th>
             <th>Contact Number</th>
+            <th>Digital Signature</th>
+            <th>Action</th>
         </tr>
     </thead>
     <tbody>
@@ -28,7 +30,7 @@
             <td contenteditable="true"></td>
           </tr> -->
 
-          <tr *ngFor="let row of rows">
+          <tr *ngFor="let row of rows; let i = index">
             <td>
                 <input type="text" [(ngModel)]="row.name">
             </td>
@@ -41,6 +43,12 @@
             <td>
                 <input type="text" [(ngModel)]="row.contact_number">
             </td>
+            <td>
+                <canvas #canvas width="200" height="100" (mouseup)="captureSignature(canvas, i)"></canvas>
+              </td>
+              <td>
+                <button (click)="clearSignature(i)">Clear Signature</button>
+              </td>
         </tr>
            
      </tbody>
