--- a/src/app/inspector_dashboard/autho-details/autho-details.component.html
+++ b/src/app/inspector_dashboard/autho-details/autho-details.component.html
@@ -11,24 +11,18 @@
 <table>
     <thead>
         <tr>
-            <th colspan="6">Inspection Conducted in the Presence Of</th>
+            <th colspan="7">Inspection Conducted in the Presence Of</th>
         </tr>
         <tr>
             <th>Name</th>
             <th>Designation</th>
+            <th>Role</th>
             <th>Company</th>
             <th>Contact Number</th>
             <th>Digital Signature</th>
-            <th>Action</th>
         </tr>
     </thead>
     <tbody>
-        <!-- <tr *ngFor="let row of rows">
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-          </tr> -->
 
           <tr *ngFor="let row of rows; let i = index">
             <td>
@@ -37,18 +31,30 @@
             <td>
                 <input type="text" [(ngModel)]="row.designation">
             </td>
+            <td class="dropdown-container">
+                <select class="dropdown" [(ngModel)]="row.role" required>
+                    <option value="Building Owner">Building Owner</option>
+                    <option value="Inspector">Inspector</option>
+                    <option value="Facility Manager">Facility Manager</option>
+                    <option value="Vendor(OEM)">Vendor(OEM)</option>
+                    <option value="PAPL Team">PAPL Team</option>
+                </select>
+            </td>
             <td>
                 <input type="text" [(ngModel)]="row.company">
             </td>
             <td>
                 <input type="text" [(ngModel)]="row.contact_number">
             </td>
+            
             <td>
                 <canvas #canvas width="200" height="100" (mouseup)="captureSignature(canvas, i)"></canvas>
+                
+                <div class="button-container">
+                    <button class="clear" (click)="clearSignature(i)">x</button>
+                </div>
               </td>
-              <td>
-                <button (click)="clearSignature(i)">Clear Signature</button>
-              </td>
+            
         </tr>
            
      </tbody>
@@ -56,7 +62,8 @@
 </table>
 <div class="btn-container">
     <button class="btn" (click)="addRow()">Add Row</button>
-    <button class="btn" (click)="show()">Proceed</button>
+    <button class="btn" [class.disabled-button]="!allFieldsFilled()" [disabled]="!allFieldsFilled()" (click)="show()">Proceed</button>
+
 </div>
 </body>
 </html>
