--- a/src/app/inspector_dashboard/list-certificate/list-certificate.component.scss
+++ b/src/app/inspector_dashboard/list-certificate/list-certificate.component.scss
@@ -2,7 +2,7 @@
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
-    background-color: whitesmoke;
+    // background-color: whitesmoke;
     margin-top: 50px;
 }
 
