--- a/src/app/out-box/out-box.component.html
+++ b/src/app/out-box/out-box.component.html
@@ -40,7 +40,7 @@
     <!-- Display message if allValues array is empty -->
     <div class="no-data-container">
       <ng-template #noData>
-          <p class="no-data-message">No Data Available in OutBox</p>
+          <p class="no-data-message">{{DataNotAvai}}</p>
       </ng-template>
   </div>
 </div>
