--- a/src/app/inspector_dashboard/certificate-home/upload-pdf/upload-pdf.component.html
+++ b/src/app/inspector_dashboard/certificate-home/upload-pdf/upload-pdf.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <p>Unit Lists</p>
     <table>
         <thead>
@@ -9,7 +9,7 @@
         </thead>
         <tbody>
             <tr *ngFor="let unit of units">
-                <td>{{ unit }}</td>
+                <td>{{ unit }}</td> -->
                 <!-- <td> -->
                     <!-- <input type="file" (change)="onFileSelected($event.target.files, unit)"> -->
                     <!-- <input type="file" (change)="onFileSelected(($event.target as HTMLInputElement).files, unit)"> -->
@@ -18,15 +18,43 @@
 
                     <!-- <button (click)="uploadPDF(unit)">Upload</button> -->
              <!-- </td> -->
-             <td>
+             <!-- <td>
                 <label for="fileInput{{ unit }}" class="custom-file-upload">
                     <input type="file" id="fileInput{{ unit }}" (change)="onFileSelected($event, unit)">
                     Choose PDF
                 </label>
-                <span>{{ selectedFiles[unit]?.name }}</span> <!-- Display selected file name -->
+                <span>{{ selectedFiles[unit]?.name }}</span>  Display selected file name -->
 
-                <button (click)="uploadPDF(unit)">Upload</button>
+              <!-- <button (click)="uploadPDF(unit)">Upload</button>
             </td>
+            </tr>
+        </tbody>
+    </table>
+</div> -->
+
+<link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.0/css/all.css">
+    <p>Unit Lists</p>
+    <div class="container">
+    <table>
+        <thead>
+            <tr class="thg">
+                <th>Unit Name</th>
+                <th>Upload PDF</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let unit of units">
+                <td>{{ unit }}</td>
+             <td>
+               <div class="drop-icon" (click)="triggerFileInput(unit)">
+                    <i class="fa-light fa-file-upload"></i>
+                </div>
+                <input type="file" id="fileInput{{ unit }}" style="display: none;" (change)="onFileSelected($event, unit)">
+                <span>{{selectedFiles[unit]?.name}}</span> <!-- Display selected file name -->
+                
+            </td>
+            <td> <button (click)="uploadPDF(unit)">Upload</button></td>
             </tr>
         </tbody>
     </table>
