--- a/src/app/inspector_dashboard/certificate-home/upload-pdf/upload-pdf.component.scss
+++ b/src/app/inspector_dashboard/certificate-home/upload-pdf/upload-pdf.component.scss
@@ -1,62 +1,70 @@
-/* Reset CSS */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'Inter', sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background-color: whitesmoke;
-}
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400&display=swap');
 
 .container {
-    width: 80%;
+    width: 100%; 
     margin-top: 50px;
+    display: flex;
+    justify-content: center;
 }
 
 table {
-    width: 100%;
+    width: 80%; 
     border-collapse: collapse;
+    max-width: 100%;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-top:5px; 
 }
 
-table th, table td {
-    padding: 10px;
+table th,
+table td {
+    padding: 15px;
     border-bottom: 1px solid #ccc;
-    text-align: left;
+    text-align: center;
 }
 
-table th {
-    background-color: #f0f0f0;
-}
-
-table td input[type="file"] {
-    display: none;
-}
-
-table td button {
-    padding: 8px 16px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-.custom-file-upload input[type="file"] {
-    display: none;
+.thg {
+    background-image: linear-gradient(125deg, #2c3e50 50%,#000000 50%);
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    
 }
 
 .custom-file-upload {
-    border: 1px solid #ccc;
     display: inline-block;
-    padding: 6px 12px;
+    padding: 8px 12px;
+    border: 1px solid #007bff;
+    border-radius: 4px;
     cursor: pointer;
+    background-color: #007bff;
+    color: #fff;
+    margin-right: 5px;
 }
 
-table td button:hover {
-    background-color: #0056b3;
+
+.custom-file-upload input[type="file"] {
+    display: none;
 }
+button {
+    padding: 10px 20px; 
+    background-color: #4CAF50; 
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease; 
+}
+p{
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 30px;
+}
+
+
+.drop-icon i {
+    color: #888; 
+    font-size: 3rem; 
+  }
