--- a/src/app/inspector_dashboard/more-options/key-abstract-list/key-abstract-list.component.scss
+++ b/src/app/inspector_dashboard/more-options/key-abstract-list/key-abstract-list.component.scss
@@ -1,15 +1,3 @@
-.fa-eye {
-    font-size: 20px; 
-    color: #007bff;
-    cursor: pointer; 
-    display: flex; /* Enable flexbox */
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-  }
-
-
-
-
 /* Container styling */
 .report-cards-container {
     display: flex;
@@ -22,17 +10,17 @@
   .report-card {
     width: 300px;
     background-color: #f7f4f4; /* Light gray background color */
-    border-radius: 10px;
-    // box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 13px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     cursor: pointer;
   }
   
-//   .report-card:hover {
-//     transform: translateY(-5px);
-//     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-//   }
+  .report-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  }
   
   /* Header styling */
   .card-header {
@@ -41,13 +29,13 @@
     padding: 12px;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    text-align: center; 
+    text-align: center; /* Center align text */
   }
   
   .card-title {
     font-size: 20px;
     font-weight: bold;
-    color: #141415a5;
+    color: #141415a5; /* Dark grayish color */
   
     margin: 0;
   }
@@ -66,25 +54,25 @@
   .info-label {
     font-weight: bold;
     margin-right: 10px;
-    color: #171515;
+    color: #171515; /* Darker gray color */
   }
   
   .info-value {
     margin: 0;
   }
   
-  
+  /* Additional Information styling */
   .date,
   .status {
     font-size: 14px;
-    color: #666; 
+    color: #666; /* Medium gray color */
   }
   
   /* Icon styling */
   .info-label i {
-    margin-right: 5px; 
-    font-size: 12px; 
-    color: #057898;
+    margin-right: 5px; /* Space between icon and text */
+    font-size: 12px; /* Icon size */
+    color: #057898; /* Dark teal color */
   }
   .company-logo{
     height: 200px;
@@ -92,7 +80,7 @@
   }
   /* Download button styling */
   .download-button {
-    display: block; 
+    display: block; /* Change display to block for center alignment */
     width: fit-content; /* Set width to fit content */
     margin: 0 auto; /* Center alignment */
     padding: 2px 6px;
@@ -102,4 +90,12 @@
     font-size: 10px;
     border-radius: 4px;
     transition: background-color 0.3s ease;
+  }
+  
+  // .download-button:hover {
+  //   background-color: #0056b3; /* Darker blue color on hover */
+  // }
+  /* Icon styling */
+  .download-button i {
+    margin-right: 5px; /* Space between icon and text */
   }
