--- a/src/app/inspector_dashboard/certificate-home/view-certificate/view-certificate.component.html
+++ b/src/app/inspector_dashboard/certificate-home/view-certificate/view-certificate.component.html
@@ -1,4 +1,4 @@
-<!-- <table>
+<table>
     <thead>
       <tr>
         <th>Unit NO</th>
@@ -15,44 +15,9 @@
         <td>{{ file.contract }}</td>
         <td>{{ file.document_id }}</td>
        <td><i class="fa fa-eye"  (click)="displayPDF(file.unit_name,file.document_id,file.id,file.contract)"></i></td>   <!-- (click)="displayPDF(file.file_data)" -->
-      <!-- </tr>
+      </tr>
     </tbody>
-  </table> --> 
-  <div class="report-cards-container">
-    <div class="report-card" *ngFor="let file of uploadFiles">
-  
-      <div class="card-header">
-  
-        <div class="card-title">
-          <i class="fas fa-file-contract"></i> <!-- File contract icon -->
-          Unit NO: {{ file.unit_name }}
-        </div>
-        </div>
-  
-        <div class="card-content" >
-  
-        <!-- <div class="info-row"> -->
-          <!-- <span class="info-label"><i class="fas fa-user"></i>Unit NO:</span> -->
-          <!-- <span class="info-value"> {{ file.unit_name }}</span> -->
-        <!-- </div> -->
-        
-        <div class="info-row">
-          <span class="info-label"><i class="fas fa-building"></i> Building Name:</span> <!-- Building icon -->
-          <span class="info-value">{{ file.building_name }}</span>
-        </div>
-        <!-- Additional Information -->
-        <div class="info-row">
-          <span class="info-label"><i class="fa fa-credit-card"></i> Contract:</span> <!-- Building icon -->
-          <span class="info-value"> {{ file.contract }}</span>
-        </div>
-        <div class="info-row">
-          <span class="info-label"><i class="fa fa-book-alt"></i>Document ID:</span> <!-- Calendar icon -->
-          <span class="info-value"> {{ file.document_id }}</span>
-        </div>
-        <i class="fa fa-eye"  (click)="displayPDF(file.unit_name,file.document_id,file.id,file.contract)"></i>
-  </div>
-      </div>
-    </div>
+  </table>
   <!-- <div *ngIf="pdfSrc">
     <pdf-viewer [src]="pdfSrc" [render-text]="true" style="display: block; width: 100%; height: 600px;"></pdf-viewer>
   </div> -->
